2003-04-26  Bastien Nocera  <hadess@hadess.net>

	* README: upd regarding debugging
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init), (load_audio_out_driver),
	(bacon_video_widget_open): added some way to get debugging,
	if we can't autoprobe a device, fallback on null output, and stop
	whinging, complain if a file is audio-only and there's no audio out,
	tell the user about the additional plugins only if we don't have a
	decoder for the video
	* src/totem.c: (totem_action_set_mrl): move the "additional plugins"
	hint to the video widget

2003-04-25  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/totem.glade: upd
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_deinterlacing),
	(bacon_video_widget_set_tv_out), (bacon_video_widget_get_tv_out):
	* src/bacon-video-widget-xine.c: (load_video_out_driver),
	(bacon_video_widget_unrealize),
	(bacon_video_widget_get_deinterlacing),
	(bacon_video_widget_set_tv_out), (bacon_video_widget_get_tv_out):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (on_tvout_toggled),
	(totem_setup_preferences), (totem_preferences_tvout_setup):
	* src/totem-preferences.h:
	* src/totem.c: (totem_action_error), (totem_action_handle_key),
	(video_widget_create): implemented tv-out via DXR3 or nvtv, only
	the dxr3 setting is actually saved, tv-out needs to be enabled at
	run-time for nvtv

2003-04-25  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (got_time_tick),
	(bacon_video_widget_finalize): Fixed seeking support.

2003-04-25  Bastien Nocera  <hadess@hadess.net>

	* totem.spec.in: Package the thumbnailer as well (spotted by Chris
	Chabot <chabotc@4-ice.com>

2003-04-25  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* src/gtk-playlist.c: (drop_cb), (selection_changed),
	(gtk_playlist_add_files), (gtk_playlist_remove_files),
	(gtk_playlist_move_files), (gtk_playlist_up_files),
	(gtk_playlist_down_files), (treeview_row_changed),